# Algorithm-Engineering-Git

./: contHackS  hello  hello_simple  numIntF  piNum  piNum2  poMont  poMontL  raceCon  schedClause  unbWork
Projekt/: CMakeLists.txt  Coordinates.cpp  Coordinates.h  PerfEvent.hpp  Projekt_exec  README.md  catch_main.cpp  catch_tests.cpp  catch_tests_configurationHelper.cpp  catch_tests_fitnessHelper.cpp  catch_tests_helperFunctions.cpp  catch_tests_importHelper.cpp  configurationHelpers.cpp  configurationHelpers.h  datatypes.h  exportHelper.cpp  exportHelper.h  fitnessHelper.cpp  fitnessHelper.h  helperFunctions.cpp  helperFunctions.h  importHelper.cpp  importHelper.h  input.txt  main.cpp  main_mitArrays.cpp  main_ohneHelper.cpp
Projekt/catch/: CMakeLists.txt
Projekt/data/: empty_10x9.ppm  empty_20x15.ppm  empty_5x4_5.ppm
Projekt/data/input/: circle_125_small.ppm  dots_12.ppm  dots_168.ppm  dots_379.ppm  star_194.ppm  stripes_112_small.ppm
Projekt/data/output/: farbverlauf.ppm  karo.ppm  output.ppm  output0.ppm  output10000.ppm  output100000.ppm  output110000.ppm  output120000.ppm  output125000.ppm  output130000.ppm  output140000.ppm  output150000.ppm  output160000.ppm  output170000.ppm  output175000.ppm  output180000.ppm  output190000.ppm  output20000.ppm  output200000.ppm  output210000.ppm  output220000.ppm  output225000.ppm  output230000.ppm  output240000.ppm  output25000.ppm  output250000.ppm  output260000.ppm  output270000.ppm  output275000.ppm  output280000.ppm  output290000.ppm  output30000.ppm  output300000.ppm  output310000.ppm  output320000.ppm  output330000.ppm  output340000.ppm  output350000.ppm  output360000.ppm  output370000.ppm  (+25 more)
Projekt/data/shapes/: cube_small.ppm  diagStripesUp_small.ppm  linGraphDown_small.ppm  vertStripes_small.ppm  xCube_small.ppm
Projekt/profiler/calcNo/: calcNo.vtune
Projekt/profiler/calcPar/: calcPar.vtune
Projekt/profiler/hotspots/: hotspots.vtune
Projekt/profiler/threading/: threading.vtune
Projekt/results/: results.vtune
Projekt/results/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options  runss.options
Projekt/results/data.0/: 1499174-1499184.0-1499184.0.th  1499174-1499184.0-1499184.0.th.aux  1499174-1499184.0-1499217.0.th  1499174-1499184.0-1499217.0.th.aux  1499174-1499184.0-1499218.0.th  1499174-1499184.0-1499218.0.th.aux  1499174-1499184.0-1499219.0.th  1499174-1499184.0-1499219.0.th.aux  1499184.stat.perf  228250.stat.perf  perfcmd  systemcollector-1499174-ppc811.sc  systemcollector-228240-ppc807.sc  userapicollector-1499184-62be6abe-1499184-631dbb3c.th  userapicollector-1499184-62be6abe-1499216-62c79fe1.th  userapicollector-1499184-62be6abe-1499217-635c05c0.th  userapicollector-1499184-62be6abe-1499218-635d73cb.th  userapicollector-1499184-62be6abe-1499219-6cdf9772.th  userapicollector-1499184-62be6abe.trace
Projekt/resultsHS_ParDyn/: resultsHS_ParDyn.vtune
Projekt/resultsHS_ParDyn/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
Projekt/resultsHS_ParDyn/data.0/: 303227-303246.0-303246.0.th  303227-303246.0-303246.0.th.aux  303227-303246.0-303265.0.th  303227-303246.0-303265.0.th.aux  303227-303246.0-303266.0.th  303227-303246.0-303266.0.th.aux  303227-303246.0-303267.0.th  303227-303246.0-303267.0.th.aux  303227-303246.0.trace  303246.stat.perf  perfcmd  systemcollector-303227-ppc807.sc  userapicollector-303246-61cd52ee-303246-622b805b.th  userapicollector-303246-61cd52ee-303264-61d559bc.th  userapicollector-303246-61cd52ee-303265-62721322.th  userapicollector-303246-61cd52ee-303266-628e0907.th  userapicollector-303246-61cd52ee-303267-63cacf28.th  userapicollector-303246-61cd52ee.trace
Projekt/resultsHS_ParDyn/sqlite-db/: dicer.db
Projekt/resultsME_Native/: resultsME_Native.vtune
Projekt/resultsME_Native/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
Projekt/resultsME_Native/data.0/: systemcollector-293975-ppc807.sc  userapicollector-293996-fcd7b021-293996-fd341d79.th  userapicollector-293996-fcd7b021-294020-fcdfe133.th  userapicollector-293996-fcd7b021-294021-fd55961e.th  userapicollector-293996-fcd7b021-294022-fd578275.th  userapicollector-293996-fcd7b021-294023-fd5a43f9.th  userapicollector-293996-fcd7b021.trace
Projekt/resultsME_Par/: resultsME_Par.vtune
Projekt/resultsME_Par/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
Projekt/resultsME_Par/data.0/: systemcollector-293425-ppc807.sc  userapicollector-293444-41e9ed67-293444-4245fa21.th  userapicollector-293444-41e9ed67-293469-41f27902.th  userapicollector-293444-41e9ed67-293470-425a232d.th  userapicollector-293444-41e9ed67-293471-425dcf81.th  userapicollector-293444-41e9ed67-293472-425ef3ab.th  userapicollector-293444-41e9ed67.trace
Projekt/resultsME_ParDyn/: resultsME_ParDyn.vtune
Projekt/resultsME_ParDyn/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
Projekt/resultsME_ParDyn/data.0/: systemcollector-292293-ppc807.sc  userapicollector-292328-39071bfd-292328-396f7308.th  userapicollector-292328-39071bfd-292342-391a81cf.th  userapicollector-292328-39071bfd-292343-398aa1f9.th  userapicollector-292328-39071bfd-292344-398b5e13.th  userapicollector-292328-39071bfd-292345-398fda1b.th  userapicollector-292328-39071bfd.trace
Projekt/resultsME_ParDynTest/: resultsME_ParDynTest.vtune
Projekt/resultsME_ParDynTest/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
Projekt/resultsME_ParDynTest/data.0/: systemcollector-300457-ppc807.sc  userapicollector-300478-64d2f3de-300478-6535f915.th  userapicollector-300478-64d2f3de-300492-64da8127.th  userapicollector-300478-64d2f3de-300493-657fdd20.th  (+3 more)
Projekt/resultsParCrit/: resultsParCrit.vtune
Projekt/resultsParCrit_/: resultsParCrit_.vtune
Projekt/resultsT_Native/: resultsT.vtune
Projekt/resultsT_Par/: resultsT_Par.vtune
Projekt/resultsT_ParDyn/: resultsT_ParDyn.vtune
Projekt/resultsT_ParDynTest/: resultsT_ParDynTest.vtune
Projekt/results_/: results_.vtune
Projekt/results_ParDyn/: results_ParDyn.vtune
Test/: CMakeLists.txt  catch_main.cpp  catch_main.h  main.cpp
(+990 files in other folders)
